Fixed first tag not showing on first render of upload

--- a/app/assets/stylesheets/tags/tag_create.css
+++ b/app/assets/stylesheets/tags/tag_create.css
@@ -9,7 +9,7 @@
     margin-bottom: 5px;
     margin-right: -47px;
     border: none;
-    background: white;
+    background: #f3f5f6;
     color: #006dac;
     font-size: 14px;
     font-weight: 400;
